#10102 - Fix for close icon on modal is misaligned

--- a/src/scss/base/scaffolding.scss
+++ b/src/scss/base/scaffolding.scss
@@ -199,9 +199,9 @@ img {
 
 .close {
   float: right;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   font-weight: normal;
-  line-height: 1;
+  line-height: 0 !important;
   color: #fff;
   text-shadow: none;
   opacity: 1;
